--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "genkit": "^1.20.0",
     "heic2any": "^0.0.4",
     "lucide-react": "^0.475.0",
-    "next": "15.5.9",
+    "next": "^15.5.12",
     "patch-package": "^8.0.0",
     "react": "^19.2.1",
     "react-day-picker": "^9.11.3",
