--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "firebase-admin": "^12.3.0",
     "genkit": "^1.20.0",
     "heic2any": "^0.0.4",
     "lucide-react": "^0.475.0",
@@ -52,6 +53,7 @@
     "react-dom": "^19.2.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.54.2",
+    "stripe": "^16.5.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
