--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -8,9 +8,9 @@ runConfig:
 
 env:
   - variable: STRIPE_API_KEY
-    secret: STRIPE_API_KEY
+    secret: LIVE_STRIPE_API_KEY
   - variable: STRIPE_WEBHOOK_SECRET
-    secret: STRIPE_WEBHOOK_SECRET
+    secret: LIVE_STRIPE_WEBHOOK_SECRET
   - variable: NEXT_PUBLIC_URL
     value: "https://auctionprime.one"
   - variable: STRIPE_PLUS_MONTHLY_ID
