--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -8,20 +8,23 @@ runConfig:
   # memoryMiB: 512
 
 # Environment variables and secrets.
+# See https://firebase.google.com/docs/app-hosting/configure#user-defined-environment
 env:
+  # Public environment variables for Stripe prices
   - variable: NEXT_PUBLIC_URL
-    value: https://www.auctionprime.one
+    value: "https://www.auctionprime.one"
   - variable: STRIPE_PLUS_MONTHLY_ID
-    value: "price_YOUR_PLUS_MONTHLY_ID"
+    value: "price_1T4OHgK0UI9TeZnH1NEUNaNF"
   - variable: STRIPE_ULTIMATE_MONTHLY_ID
-    value: "price_YOUR_ULTIMATE_MONTHLY_ID"
+    value: "price_1T4OIAK0UI9TeZnH8FzhMmcM"
   - variable: STRIPE_TOKEN_PRICE_ID
-    value: "price_YOUR_TOKEN_PRICE_ID"
+    value: "price_1T4OIbK0UI9TeZnHOJNK9x9j"
   - variable: STRIPE_BOOST_PRICE_ID
-    value: "price_YOUR_BOOST_PRICE_ID"
-
-  # Grant access to secrets in Cloud Secret Manager.
-  # These are the secrets you created in the Firebase Console.
+    value: "price_1T4OJ7K0UI9TeZnHPKuFevmG"
+  
+  # Secret environment variables. The values for these are stored securely in 
+  # Google Cloud Secret Manager and should be configured in the Firebase Console.
+  # See https://firebase.google.com/docs/app-hosting/configure#secret-parameters
   - variable: STRIPE_API_KEY
     secret: STRIPE_API_KEY
   - variable: STRIPE_WEBHOOK_SECRET
