studio-7682838337:~/studio{main}$ git push Enumerating objects: 37, done

--- a/firebase.json
+++ b/firebase.json
@@ -43,6 +43,17 @@
         "firebase-debug.*.log",
         "functions"
       ]
+    },
+    {
+      "backendId": "auctionprime-live",
+      "rootDir": "/",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "functions"
+      ]
     }
   ]
 }
