--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,44 @@
-# Local environment variables
-.env
-.env.local
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Dependencies
+# dependencies
 /node_modules
+/.pnp
+.pnp.js
 
-# Next.js build output
-/.next
-/out
+# testing
+/coverage
 
-# Other
-firebase-debug.log*
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+.env
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+.next/types/**/*.ts
+
+# Firebase
+*-debug.log
+.firebase/
+functions/node_modules
+functions/.next
+/hs_err_pid*
