--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -2,22 +2,31 @@
 # See https://firebase.google.com/docs/app-hosting/configure#cloud-run
 runConfig:
   minInstances: 0
-  # maxInstances: 100
-  # concurrency: 80
-  # cpu: 1
-  # memoryMiB: 512
 
 # Environment variables and secrets.
-# env:
-  # Configure environment variables.
-  # See https://firebase.google.com/docs/app-hosting/configure#user-defined-environment
-  # - variable: MESSAGE
-  #   value: Hello world!
-  #   availability:
-  #     - BUILD
-  #     - RUNTIME
-
-  # Grant access to secrets in Cloud Secret Manager.
-  # See https://firebase.google.com/docs/app-hosting/configure#secret-parameters
-  # - variable: MY_SECRET
-  #   secret: mySecretRef
+# IMPORTANT: Do NOT paste your secret values directly into this file.
+# This file only tells your app the NAMES of the secrets to use.
+# You must set the actual secret VALUES using the terminal commands below.
+#
+# To set your secrets, run these commands in your terminal:
+# firebase apphosting:secrets:set STRIPE_API_KEY
+# firebase apphosting:secrets:set STRIPE_WEBHOOK_SECRET
+# firebase apphosting:secrets:set STRIPE_PLUS_MONTHLY_ID
+# firebase apphosting:secrets:set STRIPE_ULTIMATE_MONTHLY_ID
+# firebase apphosting:secrets:set STRIPE_TOKEN_PRICE_ID
+# firebase apphosting:secrets:set STRIPE_BOOST_PRICE_ID
+#
+env:
+  # Grant access to secrets stored securely in Google Secret Manager.
+  - variable: STRIPE_API_KEY
+    secret: STRIPE_API_KEY # This REFERENCES the secret, it is not the value itself.
+  - variable: STRIPE_WEBHOOK_SECRET
+    secret: STRIPE_WEBHOOK_SECRET
+  - variable: STRIPE_PLUS_MONTHLY_ID
+    secret: STRIPE_PLUS_MONTHLY_ID
+  - variable: STRIPE_ULTIMATE_MONTHLY_ID
+    secret: STRIPE_ULTIMATE_MONTHLY_ID
+  - variable: STRIPE_TOKEN_PRICE_ID
+    secret: STRIPE_TOKEN_PRICE_ID
+  - variable: STRIPE_BOOST_PRICE_ID
+    secret: STRIPE_BOOST_PRICE_ID
