--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -4,29 +4,24 @@ runConfig:
   minInstances: 0
 
 # Environment variables and secrets.
-# IMPORTANT: Do NOT paste your secret values directly into this file.
-# This file only tells your app the NAMES of the secrets to use.
-# You must set the actual secret VALUES using the terminal commands below.
-#
-# To set your secrets, run these commands in your terminal:
-# firebase apphosting:secrets:set STRIPE_API_KEY
-# firebase apphosting:secrets:set STRIPE_WEBHOOK_SECRET
-# firebase apphosting:secrets:set STRIPE_PLUS_MONTHLY_ID
-# firebase apphosting:secrets:set STRIPE_ULTIMATE_MONTHLY_ID
-# firebase apphosting:secrets:set STRIPE_TOKEN_PRICE_ID
-# firebase apphosting:secrets:set STRIPE_BOOST_PRICE_ID
-#
 env:
-  # Grant access to secrets stored securely in Google Secret Manager.
+  # --- SECRETS ---
+  # These are your Stripe API keys. They are SECRET.
+  # Set their values using the `firebase apphosting:secrets:set` commands.
   - variable: STRIPE_API_KEY
-    secret: STRIPE_API_KEY # This REFERENCES the secret, it is not the value itself.
+    secret: STRIPE_API_KEY
   - variable: STRIPE_WEBHOOK_SECRET
     secret: STRIPE_WEBHOOK_SECRET
+
+  # --- PUBLIC IDs ---
+  # These are your Stripe Price IDs. They are NOT secret.
+  # You can safely paste their values directly here.
+  # Find these in your Stripe Dashboard under Products.
   - variable: STRIPE_PLUS_MONTHLY_ID
-    secret: STRIPE_PLUS_MONTHLY_ID
+    value: "price_YOUR_PLUS_MONTHLY_ID" # <-- REPLACE THIS VALUE
   - variable: STRIPE_ULTIMATE_MONTHLY_ID
-    secret: STRIPE_ULTIMATE_MONTHLY_ID
+    value: "price_YOUR_ULTIMATE_MONTHLY_ID" # <-- REPLACE THIS VALUE
   - variable: STRIPE_TOKEN_PRICE_ID
-    secret: STRIPE_TOKEN_PRICE_ID
+    value: "price_YOUR_TOKEN_PRICE_ID" # <-- REPLACE THIS VALUE
   - variable: STRIPE_BOOST_PRICE_ID
-    secret: STRIPE_BOOST_PRICE_ID
+    value: "price_YOUR_BOOST_PRICE_ID" # <-- REPLACE THIS VALUE
