--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/google-genai": "^1.20.0",
-    "@genkit-ai/next": "^1.20.0",
+    "@genkit-ai/google-genai": "1.0.0",
+    "@genkit-ai/next": "1.0.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -43,14 +43,14 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "firebase-admin": "^12.3.0",
-    "genkit": "^1.20.0",
+    "genkit": "1.0.0",
     "heic2any": "^0.0.4",
     "lucide-react": "^0.475.0",
-    "next": "^15.5.12",
+    "next": "14.2.3",
     "patch-package": "^8.0.0",
-    "react": "^19.2.1",
+    "react": "18.2.0",
     "react-day-picker": "^9.11.3",
-    "react-dom": "^19.2.1",
+    "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.54.2",
     "stripe": "^16.5.0",
@@ -59,12 +59,19 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^19.2.1",
-    "@types/react-dom": "^19.2.1",
-    "genkit-cli": "^1.20.0",
+    "@types/node": "20",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
+    "genkit-cli": "1.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "5"
+  },
+  "overrides": {
+    "genkit": "1.0.0",
+    "@genkit-ai/core": "1.0.0",
+    "@genkit-ai/ai": "1.0.0",
+    "@genkit-ai/google-genai": "1.0.0",
+    "@genkit-ai/next": "1.0.0"
   }
 }
