--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9002",
+    "dev": "next dev -p 9002",
     "genkit:dev": "echo 'Genkit dev server temporarily disabled'",
     "genkit:watch": "echo 'Genkit dev server temporarily disabled'",
     "build": "NODE_ENV=production next build",
