--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -14,14 +14,13 @@ env:
     secret: STRIPE_WEBHOOK_SECRET
 
   # --- PUBLIC IDs ---
-  # These are your Stripe Price IDs. They are NOT secret.
-  # You can safely paste their values directly here.
-  # Find these in your Stripe Dashboard under Products.
+  # IMPORTANT: Replace these placeholders with the actual API IDs (price_...) 
+  # from your new LIVE Stripe account products.
   - variable: STRIPE_PLUS_MONTHLY_ID
-    value: "price_REPLACE_WITH_YOUR_LIVE_PLUS_ID"
+    value: "REPLACE_WITH_NEW_LIVE_PLUS_ID"
   - variable: STRIPE_ULTIMATE_MONTHLY_ID
-    value: "price_REPLACE_WITH_YOUR_LIVE_ULTIMATE_ID"
+    value: "REPLACE_WITH_NEW_LIVE_ULTIMATE_ID"
   - variable: STRIPE_TOKEN_PRICE_ID
-    value: "price_REPLACE_WITH_YOUR_LIVE_TOKEN_ID"
+    value: "REPLACE_WITH_NEW_LIVE_TOKEN_ID"
   - variable: STRIPE_BOOST_PRICE_ID
-    value: "price_REPLACE_WITH_YOUR_LIVE_BOOST_ID"
+    value: "REPLACE_WITH_NEW_LIVE_BOOST_ID"
